--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -24,7 +24,7 @@ jobs:
           python-version: '3.13'
           
       - name: Run script
-        run: python .hello-git-curso/.github/workflows/stats.py
+        run: python .github/workflows/stats.py #.hello-git-curso/
         
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
