--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -1,9 +1,10 @@
 name: Stast
 
 on: 
-  push:
-    branches: [ main ]
-
+ # push:
+  #  branches: [ main ]
+  schedule: 
+    - cron: '0 0 * * *'
 jobs: 
   build:
     runs-on: ubuntu-latest
